# heartbeat-enforcer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: heartbeat.yml
docs/: heartbeat_schema.md
examples/: changed_files.txt  invalid_bad_shape.jsonl  invalid_external_context.jsonl  invalid_missing_file.jsonl  valid_heartbeat.jsonl
heartbeat_enforcer/: __init__.py  baseline.py  cli.py  validate.py
sample_repo/: app.py  auth.py  config.py
sample_repo/telemetry/: executor_heartbeat.jsonl
tests/: __init__.py  test_baseline.py  test_output_contract.py  test_sample_repo.py  test_validate_bad_shape.py  test_validate_baseline_mode.py  test_validate_coverage.py  test_validate_external_context.py  test_validate_invalid_json.py  test_validate_missing_file.py  test_validate_operation_rules.py  test_validate_self_containment.py  test_validate_tail_mode.py  test_validate_valid.py
tests/fixtures/github_action_validation/malformed_heartbeat_case/: executor_heartbeat.jsonl
tests/fixtures/github_action_validation/valid_case/: executor_heartbeat.jsonl
