[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartbeat-enforcer"
version = "0.1.0"
description = "Deterministic heartbeat validation for autonomous system changes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = []

[project.scripts]
heartbeat = "heartbeat_enforcer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["heartbeat_enforcer*"]
